--- a/AprendaIngles/gradle/wrapper/gradle-wrapper.properties
+++ b/AprendaIngles/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Tue Nov 23 14:54:32 VET 2021
+#Wed Dec 15 11:37:47 VET 2021
 distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.3-bin.zip
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
+https\://services.gradle.org/distributions/gradle-5.6.4-all.zip=
+zipStoreBase=GRADLE_USER_HOME
